# eeg-specparam-ralph

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.toml
.ralph/: guardrails.md  progress.md  ralph_task.md
src/: __init__.py  app.py  comparison.py  eeg_generator.py  schemas.py  spectral_specparam.py  time_domain_wrapper.py  timedomain_specparam.py  timedomain_specparam_original.py
tests/: test_acf_math.py  test_comparison.py  test_eeg_generator.py  test_regression_equivalence.py  test_spectral_specparam.py  test_time_domain_wrapper.py
