[project]
name = "eeg-specparam"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24,<2.1",
    "scipy>=1.10,<1.15",
    "specparam>=2.0,<3.0",
    "statsmodels>=0.14,<0.15",
    "plotly>=5.0,<6.0",
    "fastapi>=0.100,<1.0",
    "uvicorn>=0.20,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
